--- a/wp-content/themes/dwp-wordpress-jointswp/assets/scss/partials/_landing.scss
+++ b/wp-content/themes/dwp-wordpress-jointswp/assets/scss/partials/_landing.scss
@@ -33,8 +33,12 @@
     }
     h1 a{
       background-color: $project-background;
-      padding: 2px;
+      padding: 10px;
       // line-height: 5rem;
+    }
+    .byline-date{
+      background: none;
+      color: $background-colour;
     }
   }
 }
